# dsalgo

./: .gitignore  .readthedocs.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  _config.yml  ci.sh  docker-compose.yml  go.mod  toto.md  xclip
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  go.yml  python-package.yml  rust.yml
clojure/: ci.sh
cplusplus/: .clang-format  ci.sh
cplusplus/dsalgo/: array_bisection.hpp  bellman_ford_sssp_vector_tuple_edges.hpp  binary_search_on_sequence.hpp  bit.hpp  extended_euclidean_gcd_recurse.hpp  factorial_table.hpp  factorial_tables_frequent_ops.hpp  fenwick_tree_additive.hpp  graph.hpp  longest_common_prefix_array_kasai.hpp  longest_increasing_subsequence.hpp  maximum_flow_dinic.hpp  maximum_flow_edmonds_karp.hpp  maximum_flow_ford_fulkerson.hpp  misc.hpp  modular_int.hpp  network_graph.hpp  pocket_prime_mod_choose.hpp  print_macro.hpp  rust_types.hpp  sparse_table_with_instance_idempotent_semigroup.hpp  suffix_array_induced_sort_recurse.hpp  types.hpp  z_algorithm.hpp
dart/: .gitignore  README.md  analysis_options.yaml  ci.sh  pubspec.yaml  setup_amd64.sh  setup_arm64.sh
dart/example/: dsalgo_example.dart
dart/lib/: dsalgo.dart
dart/test/: dsalgo_test.dart  gen_large_input.dart  input_large_async.dart  input_large_sync.dart  write.dart  yield.dart
docker/: .dockerignore  .env  docker-compose.yml
go/: .gitignore  README.md
haskell/: ci.sh
java/: ci.sh
kotlin/: README.md  ci.sh
nim/: ci.sh
php/: ci.sh
python/: .env  .gitignore  README.md  ci.sh  pyproject.toml
python/docs/: _rtd_conf.py  _sphinx_conf.py
python/prime/: elliptic_curve_order.py  lucas_lehmer_primality_test.py  lucas_primality_test.py  lucas_sequence.py  p_minus_1_method.py  pepin_test.py  quadratic_form_reduction.py
python/scripts/: build_sphinx_docs.sh  generate_sphinx_docs_headers.sh
python/src/dsalgo/: bit_array.py  combinatorics.py  combinatorics_test.py  modular_factorial_tables_frequent_ops_np.py  modular_int.py  primality.py  psieve.py  sparse_table_test.py
python/src/dsalgo/nb/: fenwick_tree_2d.py
python/src/prime/: b_smooth_sieve.py  cipolla_algorithm.py  elliptic_curve_points.py  is_perfect_power.py  lucas_sequence_v.py  n_order.py  p_minus_1_method_stage2.py  sieve_of_atkin.py
rust/: Cargo.toml  README.md  ci.sh  clippy.toml  rustfmt.toml
rust/src/: abs_diff.rs  accumulate_iterator.rs  accumulate_vec.rs  add_with_xor_and_bitwise_and.rs  adjacency_list_graph_from_edges.rs  adjacency_list_graph_from_edges_weighted.rs  adjacency_list_graph_old.rs  adjacency_list_graph_with_edge_id_from_edges.rs  adjacency_list_to_directed_edges.rs  adjacency_matrix_graph.rs  algebraic_structure_impl.rs  algebraic_structure_std.rs  apsp_johnson_dense.rs  apsp_johnson_sparse.rs  argsort.rs  arithmetic_series_with_diff.rs  array_compression_unique_binary_search.rs  array_rank_with_argsort.rs  articulation_points_detection_lowlink.rs  avl_tree.rs  avl_tree_ngtkn.rs  avl_tree_node_with_box_recurse_merge_split_based.rs  avl_tree_node_with_key_value_size_box_recurse.rs  avl_tree_node_with_rc_refcell_merge_split_based_recurse.rs  avl_tree_node_with_value_size_box_recurse.rs  avl_tree_ordered_multiset.rs  avl_tree_ordered_multiset_merge_split_based.rs  avl_tree_ordered_multiset_merge_split_based_rc_refcell.rs  barrett_reduction.rs  base_conversion_base_k_to_decimal.rs  base_conversion_decimal_to_base_k_with_divmod.rs  base_conversion_decimal_to_base_k_with_euclid_divrem.rs  bellman_ford_abstract_dp.rs  bellman_ford_dense.rs  bellman_ford_sssp_option_i64_with_negative_cycle_error.rs  bellman_ford_sssp_tuple_edges_no_error_with_inf_i64.rs  bellman_ford_sssp_tuple_edges_no_error_with_inf_i64_with_abstract.rs  bfs_01_priority_queue.rs  bfs_on_sparse_graph_in_degree_oriented.rs  binary_function.rs  (+771 more)
rust/tests/: impl_for_mut_ref.rs  lazy_static.rs  recursive_method_on_struct.rs  ref_field_without_lifetime.rs  smart_pointer.rs  std.rs  trait_reference.rs
scala/: README.md  ci.sh  setup_amd64.sh  setup_arm64.sh
scripts/: chmod_exec.sh  ci.sh  path_funcs.sh  pre-commit.sh  setup.sh
src/cplusplus/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  ci.sh  main  test.sh  todo.md
src/csharp/: ci.sh
src/dart/: README.md  ci.sh
src/dlang/: ci.sh
src/go/: .gitignore  ci.sh  go.mod  main.go
src/java/: ci.sh
src/julia/: ci.sh
src/kotlin/: ci.sh
src/ocaml/: ci.sh
src/perl/: ci.sh
src/rust/: CONTRIBUTING.md  Cargo.toml  README.md  ci.sh  rustfmt.toml  todo.md
src/rust/dsalgo_light/: Cargo.toml  README.md
src/rust/scripts/: ci.sh  format.sh  pre-commit.sh  rust_ci.sh  setup.sh  update_toolchain.sh
src/rust/src/: abelian_group.rs  absorbing_element.rs  accumulate_iterator.rs  accumulate_vec.rs  add_middle_nodes_and_make_double_tree_undirected_tuple_edges.rs  add_with_xor_and_bitwise_and.rs  additive_group.rs  adjacency_list_graph.rs  adjacency_list_graph_from_edges.rs  adjacency_list_graph_old.rs  adjacency_list_graph_with_edge_id_from_edges.rs  adjacency_list_to_directed_edges.rs  adjacency_matrix_graph.rs  algebraic_structure.rs  algebraic_structure_impl.rs  algebraic_structure_std.rs  apsp_johnson_dense.rs  apsp_johnson_sparse.rs  argmax.rs  argmin.rs  argsort.rs  array_compression.rs  array_compression_argsort.rs  array_compression_unique_binary_search.rs  array_rank_with_argsort.rs  articulation_points_detection_lowlink.rs  ascii_characters.rs  associative_property.rs  avl_tree.rs  avl_tree_array.rs  avl_tree_node.rs  avl_tree_node_with_box_recurse_merge_split_based.rs  avl_tree_node_with_value_size_box_recurse.rs  avl_tree_ordered_multiset.rs  avl_tree_ordered_multiset_merge_split_based_rc_refcell.rs  avl_tree_tmp.rs  barrett_reduction.rs  barrett_reduction_64.rs  base_conversion_decimal_to_base_k_with_divmod.rs  base_conversion_decimal_to_base_k_with_euclid_divrem.rs  (+892 more)
src/rust/tests/: impl_for_mut_ref.rs  mutability.rs  ref_field_without_lifetime.rs  static_mut_unsafe.rs
swift/: .swift-format  README.md  ci.sh  setup.sh
ts_node/: package-lock.json
typescript/: ci.sh
(+574 files in other folders)
