[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
authors = ["kagemeka <kagemeka1@gmail.com>"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
description = "A package for datastructures and algorithms."
documentation = "https://dsalgo.readthedocs.io"
homepage = "https://kagemeka.github.io/dsalgo"
include = []
keywords = ["algorithm", "datastructure"]

license = "MIT"
maintainers = ["kagemeka <kagemeka1@gmail.com>"]
name = "dsalgo"
packages = [{ include = "dsalgo", from = "src" }]
readme = "README.md"
repository = "https://github.com/kagemeka/dsalgo"
version = "0.2.4"

[tool.poetry.dependencies]
networkx = "^3"
numba = "0.56.4"
numpy = "^1"
python = "^3.10"
scipy = "^1"

# furo = { version = "^", optional = true }
# myst-parser = { version = "^", optional = true }
# pdoc3 = { version = "^", optional = true }
# pydata-sphinx-theme = { version = "^", optional = true }
# python-docs-theme = { version = "^", optional = true }
# sphinx = { version = "^", optional = true }
# sphinx-book-theme = { version = "^", optional = true }
# sphinx-theme-pd = { version = "^", optional = true }
# sphinx_rtd_theme = { version = "<=2.0.0", optional = true }
# sphinxcontrib-mermaid = { version = "^", optional = true }

[tool.poetry.extras]
# docs = [
#   "sphinx",
#   "furo",
#   "myst-parser",
#   "sphinx_rtd_theme",
#   "sphinxcontrib-mermaid",
#   "pdoc3",
#   "python-docs-theme",
#   "sphinx-theme-pd",
#   "sphinx-book-theme",
#   "pydata-sphinx-theme",
# ]

[tool.poetry.dev-dependencies]
# PyYAML = "^"
black = "^22"
flake8 = "^6"
isort = "^5"
mypy = "^0"
pytest = "^7"
# pytest-asyncio = "^"
# toml = "^"

[tool.black]
# https://black.readthedocs.io/en/stable/usage_and_configuration/the_basics.html#command-line-options
# https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html
# poetry run black --help
line-length = 79
target-version = ["py38", "py39", "py310", "py311"]

[tool.flake8]
# https://flake8.pycqa.org/en/latest/user/options.html
# poetry run flake8 --help
max_complexity = 20
# ignore = 'E203,W503'

[tool.mypy]
# https://mypy.readthedocs.io/en/stable/config_file.html
disallow_incomplete_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
show_absolute_path = true
strict = true
warn_return_any = true
# plugins = "numpy.typing.mypy_plugin"


[tool.pytest.ini_options]
# https://docs.pytest.org
python_files = ["*.py"]
python_classes = ["Test*", "_Test*"]
python_functions = ["test", "_test", "_test_*", "test_*"]
